<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telaAssinatura">

    <include
        android:id="@+id/include"
        layout="@layout/barrapesquisa" />

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="411dp"
        android:layout_height="335dp"
        android:layout_marginTop="125dp"
        android:background="#F44336"
        android:backgroundTint="@color/colorVermelhoEscuro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="245dp"
            android:layout_height="176dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/imagemUser"
            app:srcCompat="@drawable/usericon" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="240dp"
            android:text="@string/textNome"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="167dp"
            android:layout_marginTop="265dp"
            android:text="@string/textAdvogado"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="365dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="479dp"
        android:layout_marginEnd="16dp"
        android:background="#46AAAAAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:onClick="proximaTela"
            android:text="@string/textAssinatura"
            android:textColor="#000000"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="557dp"
        android:text="@string/textFree"
        android:textColor="@color/colorVermelhoEscuro"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="615dp"
        android:text="@string/textPremium"
        android:textColor="@color/colorVermelhoEscuro"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="551dp"
        android:buttonTint="#2A09021B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="608dp"
        android:buttonTint="#2909021B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="682dp"
        android:layout_marginEnd="18dp"
        android:text="@string/textAnuncio"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="708dp"
        android:text="@string/textApenas"
        android:textColor="#050505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="367dp"
        android:layout_height="63dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="745dp"
        android:text="@string/textValor"
        android:textColor="@color/colorVermelhoEscuro"
        android:textSize="44sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>