<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telaTermos">

    <include layout="@layout/toolbar" />

    <include layout="@layout/barrapesquisa" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="183dp"
        android:text="@string/textTermos"
        android:textAlignment="center"
        android:textColor="@color/colorVermelhoEscuro"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:text="@string/textLatim2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/textLatim2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="320dp"
        android:layout_height="176dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="642dp"
        android:text="@string/textLatim3"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>